# potato

./: .gitignore  Cargo.toml  LICENSE  README.md  README.zh.md  package.json
.qoder/repowiki/zh/content/: HTTP客户端.md  WebSocket支持.md  开发指南.md  快速开始.md  配置管理.md  项目概述.md
.qoder/repowiki/zh/content/API参考/: API参考.md  HTTP客户端API.md  HTTP服务器API.md  WebSocket API.md  宏系统API.md  数据结构定义.md  错误处理API.md
.qoder/repowiki/zh/content/HTTP服务器/: HTTPS_TLS配置.md  HTTP服务器.md  中间件管道.md  性能优化.md  服务器配置.md  静态文件服务.md
.qoder/repowiki/zh/content/HTTP服务器/路由系统/: 位置路由.md  反向代理路由.md  宏路由系统.md  嵌入式路由.md  管道上下文.md  路由系统.md
.qoder/repowiki/zh/content/宏系统/: HTTP方法宏.md  OpenAPI文档集成.md  参数绑定与验证.md  宏原理与编译时生成.md  宏系统.md  自定义宏开发.md
.qoder/repowiki/zh/content/工具模块/: 内存管理辅助.md  字符串处理工具.md  字节操作工具.md  工具模块.md  进程管理工具.md
.qoder/repowiki/zh/content/工具模块/类型转换工具/: 引用字符串工具.md  数字转换工具.md  枚举派生功能.md  类型转换工具.md
.qoder/repowiki/zh/content/工具模块/网络工具/: Socket映射工具.md  TCP流处理.md  (+1 more)
.qoder/repowiki/zh/content/最佳实践/: 安全考虑.md  开发实践.md  性能优化.md  故障排查与调试.md  最佳实践.md  测试策略.md  部署运维.md
.qoder/repowiki/zh/content/核心概念/: 中间件系统.md  会话管理.md  宏系统原理.md  异步架构设计.md  数据模型设计.md  核心概念.md
.qoder/repowiki/zh/content/示例教程/: Web开发示例.md  基础示例.md  定制化示例.md  实时通信示例.md  示例教程.md  高级功能示例.md
.qoder/repowiki/zh/content/高级功能/: WebDAV协议支持.md  优雅关闭机制.md  内存管理优化.md  反向代理功能.md  高级功能.md
.qoder/repowiki/zh/meta/: repowiki-metadata.json
.refs/: opencode.md
docs/: README.md  package-lock.json
docs/.vuepress/: config.js
docs/docs/: README.md
docs/docs/.vuepress/: config.js
docs/docs/guide/: 00_introduction.md  01_method_annotation.md  03_method_declare.md  03_server_route.md  04_graceful_shutdown.md  04_server_route.md  06_client.md
docs/en/: README.md
docs/en/guide/: 00_introduction.md  01_hello_world.md  02_method_annotation.md  03_method_declare.md  03_server_route.md  04_graceful_shutdown.md  04_server_route.md  05_client.md  05_graceful_shutdown.md  06_client.md  06_sse.md  07_sse.md  07_streaming.md  08_acme.md  09_cache.md  10_controller.md
docs/guide/: 01_hello_world.md  02_method_annotation.md  03_method_declare.md  03_server_route.md  04_server_route.md  05_client.md  05_graceful_shutdown.md  06_client.md  06_sse.md  07_acme.md  07_sse.md  07_streaming.md  09_cache.md  09_webtransport.md  10_controller.md
examples/: 00_http_server.rs  01_client_with_arg.rs  01_https_server.rs  02_openapi_server.rs  03_handler_args_server.rs  03_websocket_client.rs  04_http_method_server.rs  04_sse_client.rs  05_location_route_server.rs  06_embed_route_server.rs  07_auth_server.rs  08_websocket_server.rs  19_jemalloc_server.rs  23_reverse_proxy_server.rs  27_acme_server.rs  28_webrtc_server.rs  30_webrtc_client_subscribe.rs  31_webrtc_datachannel.rs  32_webtransport_server.rs  33_webtransport_client.rs  35_string_return_types.rs  hello.rs
examples/client/: 00_client.rs  01_client_with_arg.rs  02_client_session.rs  03_websocket_client.rs  04_sse_client.rs  04_stream_client.rs  05_http2_http3_client.rs  06_webrtc_client_publish.rs  07_webrtc_client_subscribe.rs  08_webtransport_client.rs  09_agent_session.rs
examples/server/: 00_http_server.rs  01_https_server.rs  02_openapi_server.rs  03_handler_args_server.rs  04_http_method_server.rs  05_location_route_server.rs  06_embed_route_server.rs  07_auth_server.rs  08_websocket_server.rs  09_jemalloc_server.rs  10_shutdown_server.rs  11_webdav_server.rs  12_custom_server.rs  14_reverse_proxy_with_ssh_server.rs  15_sse_server.rs  15_streaming_server.rs  16_preprocess_postprocess_server.rs  16_streaming_macro.rs  17_openai_stream.rs  18_claude_stream.rs  20_webtransport_server.rs  21_ollama_server.rs  23_header_annotation.rs  24_max_concurrency.rs  25_limit_size_server.rs  26_once_cache_example.rs  26_transfer_rate_limited_server.rs  27_session_cache_example.rs  28_error_handler.rs  28_session_cache_cookie.rs  29_cookie_full_features.rs  29_global_preprocess_postprocess.rs  30_controller_example.rs  32_json_value_return.rs  33_controller_return_types.rs
potato/: Cargo.toml  build.rs
potato-lite/: Cargo.toml
potato-lite/src/: client.rs  lib.rs  main.rs  server.rs  websocket.rs
potato-macro/: Cargo.toml
potato-macro-lite/: Cargo.toml
potato-macro-lite/src/: lib.rs
potato-macro/src/: lib.rs  utils.rs
potato/examples/: 36_header_annotation.rs  38_max_concurrency_test.rs
potato/src/: client.rs  global_config.rs  lib.rs  main.rs  server.bak.rs  server.rs  webtransport_impl.rs
potato/src/acme/: mod.rs
potato/src/client/: agent_session.rs  http2.rs  http3.rs  mod.rs
potato/src/server/: http2.rs  http3.rs  mod.rs
potato/src/utils/: ai.rs  bytes.rs  enums.rs  jemalloc_helper.rs  mod.rs  number.rs  process.rs  refbuf.rs  refstr.rs  smap.rs  string.rs  tcp_stream.rs
potato/src/webrtc/: client.rs  datachannel.rs  media.rs  mod.rs  peer.rs  room.rs  server.rs  signaling_handler.rs
potato/src/webrtc/signaling/: mod.rs  rest.rs  websocket.rs
potato/tests/: integration_tests.rs  test_acme.rs  test_acme_renewal.rs  test_acme_renewal_deep.rs  test_acme_renewal_integration.rs  test_acme_renewal_verification.rs  test_acme_workflow.rs  test_all_http_methods_string_return.rs  test_client_custom_headers.rs  test_client_features.rs  test_compile_fail_preprocess_session.rs  test_controller_empty_struct.rs  test_controller_return_types.rs  test_controller_return_types_compile.rs  test_controller_session_cache_auth.rs  test_controller_swagger_auth.rs  test_controller_tag_no_lifetime.rs  test_controller_without_session_cache.rs  test_cookie_full_features.rs  test_custom_header_macro.rs  test_custom_header_variable.rs  test_error_handler.rs  test_example_features.rs  test_feature_flags.rs  test_header_annotation.rs  test_http2_features.rs  test_http3_features.rs  test_http3_without_encrypt.rs  test_https_example.rs  test_json_value_integration.rs  test_json_value_return.rs  test_limit_size.rs  test_macro_system.rs  test_max_concurrency.rs  test_ollama_features.rs  test_once_cache.rs  test_send_flag_consistency.rs  test_server_features.rs  test_session_cache.rs  test_session_cache_compile_check.rs  (+9 more)
