[package]
name = "potato-lite"
version = "0.3.23"
edition = "2021"

[features]
default = []
std = [
    "agnostic-lite/std",
    "agnostic-lite/tokio",
    "agnostic-net/std",
    "agnostic-net/tokio",
    "agnostic-net/tokio-io",
    "dep:tokio",
]
websocket = ["dep:sha1"]

[dependencies]
agnostic-lite = { version = "0.7.0", default-features = false, features = ["embassy"] }
agnostic-net = { version = "0.4.0", default-features = false }
anyhow = { version = "1.0.102", default-features = false }
httparse = { version = "1", default-features = false }
linkme = "0.3"
potato-macro-lite = { version = "0.3.23", path = "../potato-macro-lite" }
sha1 = { version = "0.10", optional = true, default-features = false }
tokio = { version = "1", optional = true, default-features = false, features = ["macros", "rt-multi-thread"] }

[[bin]]
name = "potato-lite"
path = "src/main.rs"
required-features = ["std"]
