[package]
name = "potato-macro"
version = "0.1.12"
edition = "2021"
rust-version = "1.83"
license = "MIT"
repository = "https://github.com/fawdlstty/potato"
homepage = "https://github.com/fawdlstty/potato"
description = "A very simple and high performance http library."
keywords = ["http", "web"]
categories = []
readme = "../README.md"

[dependencies]
inventory = "0.3.15"
lazy_static = "1.5.0"
proc-macro2 = "1.0.92"
quote = "1.0.37"
rand = "0.8.5"
serde_json = "1.0.134"
syn = { version = "2.0.90", features = ["full"] }

[lib]
proc-macro = true
