[package]
name = "potato"
version = "0.2.7"
edition = "2021"
rust-version = "1.73"
license = "MIT"
repository = "https://github.com/fawdlstty/potato"
homepage = "https://github.com/fawdlstty/potato"
description = "A very simple and high performance http library."
authors = ["fawdlstty<f@fawdlstty.com>"]
keywords = ["http", "web"]
categories = []
readme = "../README.md"
exclude = ["src/main.rs"]

[dependencies]
anyhow = "1.0.94"
async-recursion = "1.1.1"
async-trait = "0.1.83"
base64 = "0.22.1"
chrono = "0.4.39"
flate2 = "1.0.35"
http = "1.2.0"
httparse = "1.9.5"
inventory = "0.3.15"
jsonwebtoken = "9.3.0"
potato-macro = { path = "../potato-macro" }                                                   # "0.2.6"
rand = "0.8.5"
regex = "1.11.1"
rust-embed = "8.5.0"
rustls-pki-types = "1.11.0"
serde = "1.0.217"
serde_json = "1.0.134"
sha1 = "0.10.6"
smallstr = "0.3.0"
smallvec = "1.14.0"
strum = { version = "0.26.3", features = ["derive"] }
tokio = { version = "1.44.1", features = ["full"] }
tokio-rustls = { version = "0.26.2", default-features = false, features = ["ring", "tls12"] }
webpki-roots = "0.26.8"

# jemalloc
tikv-jemalloc-ctl = { version = "0.6.0", optional = true }
tikv-jemalloc-sys = { version = "0.6.0", features = [
    "profiling",
    "stats",
    "unprefixed_malloc_on_supported_platforms",
    "background_threads",
], optional = true }
tikv-jemallocator = { version = "0.6.0", features = [
    "profiling",
    "stats",
    "unprefixed_malloc_on_supported_platforms",
    "background_threads",
], optional = true }
# webdav
bytes = { version = "1.10.1", optional = true }
dav-server = { version = "0.8.0", optional = true }
futures-util = { version = "0.3.31", optional = true }

[features]
default = ["openapi"]
jemalloc = ["dep:tikv-jemalloc-ctl", "dep:tikv-jemalloc-sys", "dep:tikv-jemallocator"]
openapi = []
webdav = ["dep:bytes", "dep:dav-server", "dep:futures-util"]
