[package]
name = "potato"
version = "0.2.20"
edition = "2021"
rust-version = "1.73"
license = "MIT"
repository = "https://github.com/fawdlstty/potato"
homepage = "https://github.com/fawdlstty/potato"
description = "A very simple and high performance http library."
authors = ["fawdlstty<f@fawdlstty.com>"]
keywords = ["http", "web"]
categories = []
readme = "../README.md"
exclude = ["src/main.rs"]

[dependencies]
anyhow = "1.0.100"
async-recursion = "1.1.1"
async-trait = "0.1.89"
base64 = "0.22.1"
chrono = "0.4.42"
flate2 = "1.0.35"
http = "1.4.0"
httparse = "1.9.5"
inventory = "0.3.15"
jsonwebtoken = "9.3.0"
potato-macro = "0.2.19"
#potato-macro = { path = "../potato-macro" }
rand = "0.8.5"
regex = "1.11.1"
rust-embed = "8.9.0"
rustls-pki-types = { version = "1.11.0", optional = true }
serde = "1.0.228"
serde_json = "1.0.148"
sha1 = "0.10.6"
smallstr = "0.3.0"
smallvec = "1.14.0"
strum = { version = "0.27.2", features = ["derive"] }
tokio = { version = "1.49.0", features = ["full"] }
tokio-rustls = { version = "0.26.2", default-features = false, features = ["ring", "tls12"], optional = true }
webpki-roots = { version = "0.26.8", optional = true }

# jemalloc
tikv-jemalloc-ctl = { version = "0.6.0", optional = true }
tikv-jemalloc-sys = { version = "0.6.0", features = [
    "profiling",
    "stats",
    "unprefixed_malloc_on_supported_platforms",
    "background_threads",
], optional = true }
tikv-jemallocator = { version = "0.6.0", features = [
    "profiling",
    "stats",
    "unprefixed_malloc_on_supported_platforms",
    "background_threads",
], optional = true }
# webdav
bytes = { version = "1.10.1", optional = true }
dav-server = { version = "0.8.0", optional = true }
futures-util = { version = "0.3.31", optional = true }

[features]
default = ["openapi", "tls"]
jemalloc = ["dep:tikv-jemalloc-ctl", "dep:tikv-jemalloc-sys", "dep:tikv-jemallocator"]
openapi = []
tls = ["dep:rustls-pki-types", "dep:tokio-rustls", "dep:webpki-roots"]
webdav = ["dep:bytes", "dep:dav-server", "dep:futures-util", "dep:webpki-roots"]
full = ["jemalloc", "openapi", "tls", "webdav"]

# cargo publish -p potato-macro --allow-dirty --registry crates-io
# cargo publish -p potato --allow-dirty --registry crates-io
