[package]
name = "potato"
version = "0.3.9"
edition = "2021"
rust-version = "1.85"
license = "MIT"
repository = "https://github.com/fawdlstty/potato"
homepage = "https://github.com/fawdlstty/potato"
description = "A very simple and high performance http library."
authors = ["fawdlstty<f@fawdlstty.com>"]
keywords = ["http", "web"]
categories = []
readme = "../README.md"
exclude = ["src/main.rs"]

[dependencies]
anyhow = "1.0.100"
async-recursion = "1.1.1"
async-trait = "0.1.89"
base64 = "0.22.1"
chrono = "0.4.42"
flate2 = "1.0.35"
http = "1.4.0"
httparse = "1.9.5"
inventory = "0.3.15"
jsonwebtoken = "9.3.0"
#jsonwebtoken = { version = "10.2.0", features = ["rust_crypto"] }
potato-macro = { version = "0.3.9", path = "../potato-macro" }
rand = "0.8.5"
regex = "1.11.1"
rust-embed = "8.9.0"
rustls-pki-types = { version = "1.11.0", optional = true }
serde = "1.0.228"
serde_json = "1.0.148"
sha1 = "0.10.6"
smallstr = "0.3.0"
smallvec = "1.14.0"
strum = { version = "0.27.2", features = ["derive"] }
tokio = { version = "1.49.0", features = ["full"] }
tokio-rustls = { version = "0.26.2", default-features = false, features = ["ring", "tls12"], optional = true }
webpki-roots = { version = "1.0.5", optional = true }

# ssh
russh = { version = "0.59.0", default-features = false, features = ["flate2", "ring", "rsa"], optional = true }
# webdav
bytes = { version = "1.10.1", optional = true }
dav-server = { version = "0.10.0", optional = true }
futures-util = { version = "0.3.31", optional = true }
hipstr = "0.8.0"
thread_local = "1.1.9"
# http2
h2 = { version = "0.4.12", optional = true }
# http3
h3 = { version = "0.0.8", optional = true }
h3-quinn = { version = "0.0.10", optional = true }
quinn = { version = "0.11.9", default-features = false, features = ["runtime-tokio", "rustls-ring"], optional = true }
# acme
instant-acme = { version = "0.8", default-features = true, features = ["ring"], optional = true }
x509-parser = { version = "0.16", optional = true }
# webrtc
webrtc = { version = "0.17", optional = true }
webrtc-util = { version = "0.17", optional = true }
uuid = { version = "1.0", features = ["v4"], optional = true }

[target.'cfg(not(target_os = "windows"))'.dependencies]
# jemalloc
tikv-jemalloc-ctl = { version = "0.6.0", optional = true }
tikv-jemalloc-sys = { version = "0.6.0", features = [
    "profiling",
    "stats",
    "unprefixed_malloc_on_supported_platforms",
    "background_threads",
], optional = true }
tikv-jemallocator = { version = "0.6.0", features = [
    "profiling",
    "stats",
    "unprefixed_malloc_on_supported_platforms",
    "background_threads",
], optional = true }

[dev-dependencies]
rcgen = "0.14.5"
time = "0.3"

[features]
default = ["openapi", "tls"]
http2 = ["tls", "dep:h2", "dep:bytes"]
http3 = ["tls", "dep:h3", "dep:h3-quinn", "dep:quinn", "dep:bytes"]
jemalloc = ["dep:tikv-jemalloc-ctl", "dep:tikv-jemalloc-sys", "dep:tikv-jemallocator"]
openapi = []
ssh = ["dep:russh"]
tls = ["dep:rustls-pki-types", "dep:tokio-rustls", "dep:webpki-roots"]
webdav = ["dep:bytes", "dep:dav-server", "dep:futures-util", "dep:webpki-roots"]
acme = ["tls", "dep:instant-acme", "dep:x509-parser"]
webrtc = ["dep:webrtc", "dep:webrtc-util", "dep:uuid", "dep:bytes", "tls"]
full = ["openapi", "ssh", "tls", "http2", "http3", "webdav", "acme", "webrtc"]

# cargo publish -p potato-macro --allow-dirty --registry crates-io
# cargo publish -p potato --allow-dirty --registry crates-io
# cd docs && npm run docs:dev && cd ..
# cd docs && npm run docs:build && cd ..
